# chatbot_performance_evaluator

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docs.yml
app/: app.py  main.py  services.py
configs/bots/: full_context_deepseek.json  full_context_gpt4o_mini.json  full_context_qwen3.json  jocker_deepseek.json  semantic_match.json
configs/bots/prompts/: full_context_prompt.txt  joker_prompt.txt
configs/judges/: relevance_faithfulness.json  safety_robustness.json
configs/judges/prompts/: relevance_faithfulness.txt  safety_robustness.txt
configs/models/: deepseek-r1.json  gpt-4o-mini.json  qwen3.json
data/: domain_knowledge.txt  faq.csv  faq_adversarial.csv  sample_eval.csv
deploy/huggingface/: start.sh
docs/: Makefile  api.rst  conf.py  demo.rst  deployment.rst  index.rst  installation.rst  metrics.rst  overview.rst  requirements.txt  testing.rst
docs/api/: bots.rst  config.rst  core.rst  io.rst  metrics.rst
docs/guides/: adding_bots.rst  adding_judges.rst  prompts.rst
examples/: run_benchmark.py
src/chatbot_eval/: __init__.py  types.py
src/chatbot_eval/bots/: __init__.py  base.py  factory.py  full_context.py  semantic_match.py
src/chatbot_eval/clients/: __init__.py  base.py  ollama.py  openai.py  openai_client.py
src/chatbot_eval/config/: __init__.py  builders.py  judges.py  loader.py  (+3 more)
tests/: test_app_services.py  test_bot_factory.py  test_csv_loader.py  test_evaluator_resilience.py  test_judge_metric.py  test_llm_judge.py  test_project_cleanup.py  test_semantic_match.py  test_semantic_matcher.py
(+17 files in other folders)
