[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatbot-performance-evaluator"
version = "0.5.0"
description = "Config-driven chatbot evaluation with strict semantic match, full-context bots, LLM judges, and a Streamlit app"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
  "streamlit>=1.32.0",
  "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]
openai = [
  "openai>=1.30.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
