[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatbot-performance-evaluator"
version = "0.2.0"
description = "Evaluate text-in/text-out chatbot variants with deterministic metrics and LLM-as-judge metrics."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "OpenAI"}]
dependencies = [
  "requests>=2.31.0",
  "streamlit>=1.35.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]
docs = [
  "sphinx>=7.4.0",
  "sphinx-rtd-theme>=2.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
